Fixes minimal bugs to get functional company registration actions

--- a/app/views/companies/register.html.haml
+++ b/app/views/companies/register.html.haml
@@ -6,9 +6,9 @@
         -f.error 'my_company'
         -f.error 'user'
         -f.title :my_company
-        -f.field :my_company, :name
+        -#f.field :my_company, :name
         -f.field :my_company, :code
-        -f.field :my_company, :currency, :choices=>currencies
+        -#f.field :my_company, :currency, :choices=>currencies
         -f.title :my_self
         -f.field :user, :last_name
         -f.field :user, :first_name
