Animals_husbandry modules alpha version see https://github.com/ionosphere/ekylibre/wiki/Module---gestion-de-troupeau for more informations

--- a/app/views/animal_groups/_form.html.haml
+++ b/app/views/animal_groups/_form.html.haml
@@ -5,3 +5,7 @@
   =f.input :name
   =f.input :description
   =f.input :comment
+  =f.input :age_min
+  =f.input :age_max
+  =f.input :sex
+  =f.input :is_pregnant
