--- a/app/views/animal_groups/show.html.haml
+++ b/app/views/animal_groups/show.html.haml
@@ -2,3 +2,21 @@
   -t.edit @animal_group
   -t.print_entity @animal_group
   -t.destroy(@animal_group, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal_group.destroyable?
+
+=attributes_list(@animal_group) do |l| # liste des champs à afficher 
+  -l.attribute :name
+  -l.attribute :comment
+  -l.attribute :age_min
+  -l.attribute :age_max
+  -l.attribute :sex
+  -l.attribute :is_pregnant
+  
+=tabbox(:animal_group) do |tb|
+  -tb.tab(:animals) do
+    =toolbar do |t|
+      -t.link(:new, :controller=>:animals, :group_id=>@animal_group.id)
+    =list(:animals)
+  -tb.tab(:cares) do
+    =toolbar do |t|
+      -t.link(:new, :controller=>:animal_cares, :animal_group_id=>@animal_group.id)
+    =list(:cares)
