--- a/app/views/animal_groups/_form.html.haml
+++ b/app/views/animal_groups/_form.html.haml
@@ -7,5 +7,5 @@
   =f.input :comment
   =f.input :age_min
   =f.input :age_max
-  =f.input :sex
+  =f.input :sex, :collection => AnimalGroup::SEXES, :as => :radio_buttons
   =f.input :is_pregnant
