correcting some error on refactoring

--- a/app/views/animal_groups/_form.html.haml
+++ b/app/views/animal_groups/_form.html.haml
@@ -8,4 +8,4 @@
   =f.input :age_min
   =f.input :age_max
   =f.input :sex, :collection => AnimalGroup::SEXES, :as => :radio_buttons
-  =f.input :is_pregnant
+  =f.input :pregnant
