--- a/app/views/forms/new.html.haml
+++ b/app/views/forms/new.html.haml
@@ -1,6 +1,6 @@
 -form_id = options[:id]||"f"+(rand*1_000_000_000).to_i.to_s(36)
 
-=form_tag({:action=>:create}, {:id=>form_id, :style=>"overflow:none", :class=>"vbox flex"}.merge(params[:dialog] ? {"data-dialog"=>params[:dialog]} : {})) do
+=form_tag({:action=>:create}, options[:form_options].merge(:id=>form_id).merge(params[:dialog] ? {"data-dialog"=>params[:dialog]} : {})) do
   =render :partial=>"forms/fields", :locals=>{:operation=>operation, :partial=>partial, :options=>options}
   .actions
     =submit_tag(tg(options[:submit]||:create), "data-disable-with"=>tl(:please_wait))
