--- a/app/views/assets/_form.html.haml
+++ b/app/views/assets/_form.html.haml
@@ -4,22 +4,21 @@
   -f.field :asset, :description, :field=>:textarea
   -f.field :asset, :comment, :field=>:textarea
 
-=formalize do |f|
-  -f.title :depreciation
-  -f.field :asset, :depreciable_amount
-  -f.field :asset, :currency, :choices=>currencies
-  -f.field :asset, :depreciation_method, :choices=>Asset.deprecation_methods.collect{|p| [p[0], p[1], {"data-show"=>"##{p[1]}_options"}]}, :field=>:radio
-  -f.field :asset, :started_on
+=field_set(@asset, :depreciation) do |f|
+  =formalize do |f|
+    -f.field :asset, :depreciable_amount
+    -f.field :asset, :currency, :choices=>currencies
+    -f.field :asset, :depreciation_method, :choices=>Asset.deprecation_methods.collect{|p| [p[0], p[1], {"data-show"=>"##{p[1]}_options"}]}, :field=>:radio
+    -f.field :asset, :started_on
 
+  =formalize(:id => :simplified_linear_options) do |f|
+    -f.field :asset, :depreciation_percentage
 
-=formalize(:id => :simplified_linear_options) do |f|
-  -f.field :asset, :depreciation_percentage
+  =formalize(:id => :linear_options) do |f|
+    -f.field :asset, :stopped_on
 
-=formalize(:id => :linear_options) do |f|
-  -f.field :asset, :stopped_on
-
-=formalize do |f|
-  -f.title :accountancy
-  -f.field :asset, :journal_id, :choices=>{:reflection=>:journals}, :new=>true
-  -f.field :asset, :allocation_account_id, :choices=>:account, :new=>true
-  -f.field :asset, :charges_account_id, :choices=>:account, :new=>true
+=field_set(@asset, :accountancy) do |f|
+  =f.association :journal
+  =formalize do |f|
+    -f.field :asset, :allocation_account_id, :choices=>:account, :new=>true
+    -f.field :asset, :charges_account_id, :choices=>:account, :new=>true
