working on image and reporting module

--- a/app/views/animal_groups/show.html.haml
+++ b/app/views/animal_groups/show.html.haml
@@ -20,3 +20,5 @@
     =toolbar do |t|
       -t.link(:new, :controller=>:animal_cares, :animal_group_id=>@animal_group.id)
     =list(:cares)
+    =image_tag(@chart)
+
