--- a/app/views/entities/show.html.haml
+++ b/app/views/entities/show.html.haml
@@ -1,7 +1,7 @@
 =render :partial=>"entities/search"
 =toolbar do |t|
   -t.edit @entity
-  -t.print_entity @entit
+  -t.print_entity @entity
   -t.destroy(@entity, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @entity.destroyable?
 
 =attributes_list(@entity) do |l|
