--- a/app/views/land_parcels/_form.html.haml
+++ b/app/views/land_parcels/_form.html.haml
@@ -3,9 +3,10 @@
   -f.error :land_parcel
   -f.field :land_parcel, :name
   -f.field :land_parcel, :number
-  -f.field :land_parcel, :group_id, :choices=>{:reflection=>:land_parcel_groups}, :new=>true
-  -# f.field :land_parcel, :polygon
-  -f.field :land_parcel, :area_measure
-  -f.field :land_parcel, :area_unit_id, :choices=>{:reflection=>:surface_units}, :new=>{:base=>'m2'}
-  -f.field :land_parcel, :started_on
   -f.field :land_parcel, :description, :field=>:textarea
+  -f.field :land_parcel, :started_on
+  -f.field :land_parcel, :area_measure
+=field_set(@land_parcel, :general_informations) do |f|
+  =f.association :group
+  =f.association :area_unit
+  -# f.field :land_parcel, :polygon
