--- a/app/views/custom_field_choices/_form.html.haml
+++ b/app/views/custom_field_choices/_form.html.haml
@@ -1,7 +1,6 @@
-=formalize do |f|
-  -f.error :custom_field_choice
-  -f.title :general_informations
-  -f.field :custom_field_choice, :custom_field_id, :choices=>{:reflection=>:choice_custom_fields}, :new=>true
-  -f.field :custom_field_choice, :name
-  -f.field :custom_field_choice, :value
+=field_set(@custom_field_choice, :general_informations) do |f|
+  =f.error :custom_field_choice
+  =f.association :custom_field
+  =f.input :name
+  =f.input :value
 
