--- a/app/views/dashboards/production.html.haml
+++ b/app/views/dashboards/production.html.haml
@@ -1,5 +1,18 @@
 -unvalidateds = Operation.unvalidateds
-.menu.indicator
+-#.menu.indicator
   %h2= tc('indicator')
   %ul
     %li= link_to tc('x_performed_operations', :count=>unvalidateds.count), :action=>:unvalidateds, :controller=>:operations
+
+=dashboard(:production) do
+  -cell :placeholder
+  -cell :demo_bar
+  -#hbox do
+    -cell :fist_of_flame, :hidden => true
+    -cell :ill_animals
+    -cell :milk_temperature
+  -hbox do
+    -cell :last_cares
+    -cell :placeholder
+  -cell :placeholder
+  -cell :placeholder
