--- a/app/views/admin/cells/placeholder_cells/show.html.haml
+++ b/app/views/admin/cells/placeholder_cells/show.html.haml
@@ -1,2 +1,2 @@
 =cell("Placeholder demo") do
-  =image_tag("http://placehold.it/#{200*@count}x200/eeeeee/000000")
+  =image_tag("http://placehold.it/960x540/DDDDDD/777777")
