Animals in progress

--- a/app/views/animal_cares/_form.html.haml
+++ b/app/views/animal_cares/_form.html.haml
@@ -4,16 +4,18 @@
 =field_set(@animal_care, :general_informations) do |f|
   =f.input :name
   =f.association :nature, :as => :radio_buttons
-  =f.association :animal
-  =f.association :animal_group
+  =f.association :animal, :label_method => :list_animal_full_name , :value_method => :id, :include_blank => true, :default_value => :blank
+  =f.association :animal_group, :include_blank => true, :default_value => :blank
   =f.input :start_on
-  =f.input :end_on
+  =f.input :end_on, :include_blank => true, :default_value => :blank
+
+=field_set(@animal_care, :diagnostic_informations) do |f|
+  =f.association :diseases, :as => :check_boxes
   =f.input :description
-  =f.input :comment
   =f.association :entity
 
 =field_set(@animal_care, :medical_informations) do |f|
-  =f.association :diseases, :as => :check_boxes
+  =f.input :comment
   =f.association :drugs, :as => :check_boxes
 
 =field_set(@animal_care, :third_informations) do |f|
