--- a/app/views/animal_cares/show.html.haml
+++ b/app/views/animal_cares/show.html.haml
@@ -2,3 +2,7 @@
   -t.edit @animal_care
   -t.print_entity @animal_care
   -t.destroy(@animal_care, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal_care.destroyable?
+
+=attributes_list(@animal_care) do |l|
+  %fieldset
+    -l.attribute :name
